--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.8.1",
     "@reduxjs/toolkit": "^1.9.1",
@@ -20,7 +21,7 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
-    "next-auth": "^4.18.8",
+    "next-auth": "^4.18.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
