--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
+    "@heroicons/react": "^2.0.14",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.8.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -22,7 +24,11 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
+    "mime": "^3.0.0",
     "next": "13.1.1",
     "next-auth": "^4.18.9",
     "react": "18.2.0",
