--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://alex:989225@localhost:5433/ecommerce?schema=public"
+GITHUB_ID=c254bc93963ee8966269
+GITHUB_SECRET=a3c4101af2c8298edcbabe27f5f6389b6c463573
+
+NEXT_PUBLIC_API_BASE_URL='http://localhost:3000/api'
+DO_SPACES_ID=DO00YVTKP8FZTTQ4CBEC
+DO_SPACES_SECRET=qFoq00GjCWieadO8eA4Zxt04YsyVtfIdLtSP1Qn7eJI
+DO_SPACES_URL=https://sgp1.digitaloceanspaces.com
+DO_SPACES_BUCKET=innorder-assets
