--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ DO_SPACES_ID=DO00YVTKP8FZTTQ4CBEC
 DO_SPACES_SECRET=qFoq00GjCWieadO8eA4Zxt04YsyVtfIdLtSP1Qn7eJI
 DO_SPACES_URL=https://sgp1.digitaloceanspaces.com
 DO_SPACES_BUCKET=innorder-assets
+JWT_SECRET=AdC5VrlrzRpzFJ+5GLu2mLblfbZ7R1+Hx/tWQIynhvM=
