--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://alex:989225@localhost:5433/ecommerce?schema=public"
+DATABASE_URL="postgres://ecommerce_lm8w_user:DqGslyRQnqYeP0We3mGAsVQ4kMTPwX2c@dpg-cfhjaa1gp3jh03lhfvqg-a.singapore-postgres.render.com/ecommerce_lm8w"
 GITHUB_ID=c254bc93963ee8966269
 GITHUB_SECRET=a3c4101af2c8298edcbabe27f5f6389b6c463573
-
+NEXT_PUBLIC_BASE_URL:'http://localhost:3000'
 NEXT_PUBLIC_API_BASE_URL='http://localhost:3000/api'
 DO_SPACES_ID=DO00YVTKP8FZTTQ4CBEC
 DO_SPACES_SECRET=qFoq00GjCWieadO8eA4Zxt04YsyVtfIdLtSP1Qn7eJI
